<resources>
    <string name="app_name">안두두두두둗</string>
    <string name="following">following</string>
    <string name="follower">follower</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="leeyongjin">이용진</string>
    <string name="choihaeun">최하은</string>
    <string name="jungseunghoon">정승훈</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    
    <string name="seunghoon_age">세</string>
    <string name="seunghoon_has_tried">번 시도됨</string>
    
    <string name="haeun_title">질문을 하면 O/X 답을 해줘요!</string>
    <string name="haeun_hint_question">질문을 입력해보세요!</string>
    <string name="haeun_btn_text">질문하기</string>
</resources>
