<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature.dledledle.SeunghoonActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_activity_seunghoon_name"
            style="@style/BaseViewSeunghoon"
            android:hint="@string/name"
            android:paddingStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_activity_seunghoon_country"
            style="@style/BaseViewSeunghoon"
            android:hint="@string/country"
            android:paddingStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/et_activity_seunghoon_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/BaseViewSeunghoon"
            android:id="@+id/btn_activity_seunghoon_start"
            android:text="@string/let_s_go"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>